[package]
name = "wc-rs"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Bosa"]
description = "wc written in Rust – word, line, character, and byte count"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
