[package]
name = "wc-rs"
description = "wc written in Rust – word, line, character, and byte count"
version = "0.1.0"
authors = ["Matheus Bosa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
